# zimmer_gripper_description

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz
launch/: view.launch.py
meshes/: camera_adapter_realsense_d435i.stl  zimmer_hrc03_body.stl  zimmer_hrc03_finger_left.stl  zimmer_hrc03_finger_right.stl  zimmer_match.stl
urdf/: camera_adapter.urdf.xacro  gripper.urdf.xacro  match.urdf.xacro  zimmer_gripper.gazebo.xacro  zimmer_gripper.transmission.xacro  zimmer_gripper.urdf.xacro
